# ShadowCLI

./: LICENSE  README.md  pyproject.toml  tree.md
attached_assets/: Analyzing Citizen Cipher's Defensive Strategies_1762343273892.docx  Chart-Tones_1757382238481.txt  Designing Brand Identity and PR Kit copy_1762343273892.docx  Designing Brand Identity and PR Kit_1762343273892.docx  Historic Heists Psychological Breakdown_1762343273892.docx  How-RV-Works_1762348338329.txt  Interview-A_1762348338329.txt  MK-Ultra_1762348338329.txt  NeuroProgramming_Manual_1762344156084.md  Pasted--CLASSIFICATION-DECLASSIFIED-LEVEL-II-FILE-ID-DOSS-101-OPS-SUBJECT-Histori-1762358574892_1762358574893.txt  Pasted-Here-is-a-Declassified-Dossier-info-page-written-in-the-style-of-your-site-that-introduces-the-h-1762358552359_1762358552359.txt  Persuasion, Biases, and Game Theory_1762343273892 copy.txt  Persuasion_ Bias, Heuristics, Game Theory__1762343273892.txt  Podcast Scripting for Offensive Defense_1762343273892 copy.txt  ProjectGrillFlame_1762348338329.md  ProjectGrillFlame_1762348338329.txt  SunStreakOpsManual_1762348338329.md  SunStreakOpsManual_1762348338329.txt  The Architecture of Influence_ Behavioral Heuristics, Cognitive Biases, and Their Application in Persuasive Design and Confidence Building_1762343273892.txt  The Architecture of Influence_ Behavioral Heuristics, Cognitive Biases, and Their Application in Persuasive Design and Confidence Building_1762344156084.docx  memory_cognition_paper_1762344156084.md  ops-manual.txt
cli/: __init__.py  cement_app.py  content.py  ereader.py  (+8 more)
(+31 files in other folders)
