[project]
name = "shadowops-cli"
version = "0.1.0"
description = "ShadowOps offline command line experience"
requires-python = ">=3.9"
dependencies = [
  "simple-term-menu>=1.6.4"
]

[project.optional-dependencies]
audio = ["simpleaudio>=1.0.4"]

[project.scripts]
shadowops = "cli.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
