[project]
name = "shadowops-cli"
version = "0.1.0"
description = "ShadowOps offline command line experience"
requires-python = ">=3.9"
dependencies = [
  "rich>=13.7",
  "simple-term-menu>=1.6.4",
  "typer>=0.9"
]

[project.optional-dependencies]
audio = ["simpleaudio>=1.0.4"]

[project.scripts]
shadowops = "cli.main:main"
shadowops-rich = "cli.rich_app:app"
shadowops-rich-shell = "cli.rich_shell:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cli"]
